Increased max memory size